# data-governance-challenge

./: README.md  main.py  pyproject.toml
src/: app.py  db.py  settings.py
src/modules/enrichment/: dependencies.py  routes.py  schemas.py  service.py
src/modules/enrichment/db/: __init__.py  queries.py  repository.py
src/modules/extract/: dependencies.py  routes.py  schemas.py  service.py
src/services/jobs/: __init__.py  enums.py  schemas.py  service.py
src/services/llm/: base.py  exceptions.py  gemini.py  schemas.py
src/services/mercadolibre/: __init__.py  exceptions.py  service.py
