[project]
name = "data-governance-challenge"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.122.0",
    "pydantic-settings>=2.12.0",
    "pyngrok>=7.5.0",
    "requests>=2.32.5",
    "google-generativeai>=0.8.3",
    "google-genai>=1.52.0",
    "pytest>=8.3.0",
    "coverage>=7.12.0",
    "pytest-cov>=7.0.0",
]
